Added HTML Rendering of Markdown Posts

--- a/templates/list.html
+++ b/templates/list.html
@@ -13,7 +13,7 @@
             <p><a href="{{ note.from.address }}">{{ note.from.name }}</a></p>
 
             <p class="lead">{{ note.components['airdispat.ch/notes/title'].string }}</p>
-            <p>{{ note.components['airdispat.ch/notes/body'].string }}</p>
+            <p ng-bind-html="note.components['airdispat.ch/notes/body'].string | mdown"></p>
           </div>
         </div>
       </div>
